# PcbDrawToPdf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
PcbDrawToPdf/: PcbDrawToPdf.py  isolate_masks.py  ui.py
src/pcbdrawtopdf/: isolate_masks.py
test/: ArduinoLearningKitStarter.kicad_pcb
