[project]
name = "PcbDrawToPdf"
version = "1.0.0"
description = "PcbDrawToPDF exports the masks employed by PcbDraw in order to apply masking on Adobe software and be able to save on PDF correctly."
authors = [
    {name = "Rafael de la Rosa", email = "rafodelarosa.og@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "lxml"
]

[project.scripts]
pcbdrawtopdf="PcbDrawToPdf.ui:run"

[project.urls]
Homepage = "https://github.com/rafo-og/PcbDrawToPdf"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"